Fix HeaderTheme size, fix LogoComponents, delete UserInfo, fix MainDashBoard, fix ScreensPage

--- a/src/components/MainDashboard/MainDashboard.module.css
+++ b/src/components/MainDashboard/MainDashboard.module.css
@@ -21,7 +21,13 @@
 
 .columns-container {
   display: flex;
-  gap: 18px;
+  gap: 11px;
   overflow-x: auto;
   overflow-y: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .columns-container {
+    gap: 18px;
+  }
 }
