--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -45,7 +45,7 @@
   width: 100%;
   height: 1px;
   border-radius: 8px;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #161616;
   margin-bottom: 14px;
   opacity: 0.1;
 }
