--- a/src/components/BoardsItem/BoardsItem.module.css
+++ b/src/components/BoardsItem/BoardsItem.module.css
@@ -15,16 +15,32 @@
   }
 }
 
+.list_item_active {
+  & svg {
+    display: block !important;
+    stroke: var(--board-item-active-icon);
+  }
+  color: var(--text-color) !important;
+  stroke: var(--text-color);
+  background-color: var(--board-item-active-background);
+  & :after {
+    content: '';
+    background-color: var(--board-item-active-accent);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 4px;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+  }
+}
+
 .title {
   margin-right: auto;
 }
 .icon {
   stroke: inherit;
   color: var(--text-color) !important;
-}
-
-.list_item.active button svg {
-  stroke: var(--board-item-active-icon) !important;
 }
 
 .icon_color {
