--- a/src/components/BoardsItem/BoardsItem.module.css
+++ b/src/components/BoardsItem/BoardsItem.module.css
@@ -17,6 +17,9 @@
 
 .list_item_active {
   & svg {
+    stroke: var(--board-item-active-icon);
+  }
+  & button {
     display: block !important;
     stroke: var(--board-item-active-icon);
   }
@@ -49,4 +52,25 @@
 
 .board_style {
   stroke: var(--title-item);
+}
+
+.loader {
+  border: 2px solid var(--title-item);
+  border-top: 2px solid var(--board-item-active-icon);
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 2s linear infinite;
+  &::after {
+    content: none;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
