--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -15,6 +15,8 @@
   font-weight: 500;
   letter-spacing: -0.02em;
   transition: background-color 0.3s ease;
+
+  max-height: 48px;
 }
 
 .btn:hover,
@@ -49,15 +51,15 @@
 }
 
 .withIcon {
-  padding: 10px 0;
+  padding: 14px 0;
 }
 
 .loader {
   border: 4px solid #f3f3f3;
   border-top: 4px solid var(--accent);
   border-radius: 50%;
-  width: 28px;
-  height: 28px;
+  width: 21px;
+  height: 21px;
   animation: spin 2s linear infinite;
 }
 
