--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -182,3 +182,24 @@
 .action-button:hover {
   opacity: 1;
 }
+
+.loader {
+  border: 2px solid var(--title-item);
+  border-top: 2px solid var(--board-item-active-icon);
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 2s linear infinite;
+  &::after {
+    content: none;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
