--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -35,7 +35,7 @@
   --card-secondary-text: rgba(22, 22, 22, 0.7);
   --board-item-active-background: #f6f6f7;
   --board-item-active-accent: #9dc888;
-  --board-item-active-icon: red;
+  --board-item-active-icon: #161616;
   --vector-item-liner: rgba(22, 22, 22, 0.1);
   --title-item: rgba(22, 22, 22, 0.5);
   --accent-btn-plus: #bedbb0;
