fix editProfile styles

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -39,6 +39,8 @@
   --vector-item-liner: rgba(22, 22, 22, 0.1);
   --title-item: rgba(22, 22, 22, 0.5);
   --accent-btn-plus: #bedbb0;
+  --accent-plus-profile: #bedbb0;
+  --accent-plus-profile-active: #9dc888;
 }
 
 .dark {
@@ -71,6 +73,8 @@
   --vector-item-liner: rgba(255, 255, 255, 0.1);
   --title-item: rgba(255, 255, 255, 0.5);
   --accent-btn-plus: #bedbb0;
+  --accent-plus-profile: #bedbb0;
+  --accent-plus-profile-active: #9dc888;
 }
 
 .violet {
@@ -107,4 +111,6 @@
   --vector-item-liner: rgba(255, 255, 255, 0.1);
   --title-item: rgba(255, 255, 255, 0.5);
   --accent-btn-plus: #b8bcfd;
+  --accent-plus-profile: #ecedfd;
+  --accent-plus-profile-active: #d6d8ff;
 }
