--- a/src/components/EditProfile/EditProfile.module.css
+++ b/src/components/EditProfile/EditProfile.module.css
@@ -47,7 +47,7 @@
   z-index: 2;
   width: 24px;
   height: 24px;
-  background-color: var(--accent);
+  background-color: var(--accent-plus-profile);
   transition: all 0.3s ease-in-out;
   border-radius: 6px;
   display: flex;
@@ -56,7 +56,7 @@
   cursor: pointer;
   &:hover,
   &:focus {
-    background-color: var(--accentBtn);
+    background-color: var(--accent-plus-profile-active);
   }
 }
 
@@ -77,7 +77,7 @@
   font-weight: 400;
   line-height: normal;
   letter-spacing: -0.28px;
-  border: 1px solid var(--hight);
+  border: 1px solid var(--accent);
   border-radius: 8px;
   background-color: transparent;
   color: var(--text-header-color);
